--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,65 @@
-asgiref==3.3.4
-Django==3.2.3
-Pillow==8.2.0
-pytz==2021.1
-sqlparse==0.4.1
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+build==1.2.2.post1
+CacheControl==0.14.3
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+cleo==2.1.0
+crashtest==0.4.1
+cryptography==45.0.2
+diff-match-patch==20241021
+distlib==0.3.9
+distro==1.9.0
+Django==5.2.1
+django-import-export==4.3.7
+django-jazzmin==3.0.1
+dulwich==0.22.8
+fastjsonschema==2.21.1
+filelock==3.18.0
+findpython==0.6.3
+gunicorn==23.0.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+installer==0.7.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jeepney==0.9.0
+jiter==0.10.0
+keyring==25.6.0
+more-itertools==10.7.0
+msgpack==1.1.0
+openai==1.79.0
+packaging==25.0
+pbs-installer==2025.4.9
+pillow==11.2.1
+pkginfo==1.12.1.2
+platformdirs==4.3.8
+poetry==2.1.3
+poetry-core==2.1.3
+pycparser==2.22
+pydantic==2.11.4
+pydantic_core==2.33.2
+pyproject_hooks==1.2.0
+qrcode==8.2
+RapidFuzz==3.13.0
+requests==2.32.3
+requests-toolbelt==1.0.0
+SecretStorage==3.3.3
+shellingham==1.5.4
+sniffio==1.3.1
+sqlparse==0.5.3
+tablib==3.8.0
+tomlkit==0.13.2
+tqdm==4.67.1
+trove-classifiers==2025.5.9.12
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+virtualenv==20.31.2
+whitenoise==6.9.0
+zstandard==0.23.0
