FAST API module

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ distro==1.9.0
 Django==5.2.1
 django-import-export==4.3.7
 django-jazzmin==3.0.1
+django-ninja==1.4.1
 djangorestframework==3.16.0
 dulwich==0.22.8
 fastjsonschema==2.21.1
