--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ distro==1.9.0
 dj-rest-auth==7.0.1
 Django==5.2.1
 django-allauth==65.8.0
+django-appconf==1.1.0
+django-compressor==4.5.1
 django-cors-headers==4.7.0
 django-import-export==4.3.7
 django-jazzmin==3.0.1
@@ -52,8 +54,10 @@ pydantic_core==2.33.2
 pyproject_hooks==1.2.0
 qrcode==8.2
 RapidFuzz==3.13.0
+rcssmin==1.1.2
 requests==2.32.3
 requests-toolbelt==1.0.0
+rjsmin==1.2.2
 SecretStorage==3.3.3
 shellingham==1.5.4
 sniffio==1.3.1
