--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ distlib==0.3.9
 distro==1.9.0
 dj-rest-auth==7.0.1
 Django==5.2.1
+django-admin-honeypot==1.1.0
 django-allauth==65.8.0
 django-appconf==1.1.0
 django-axes==8.0.0
