--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ build==1.2.2.post1
 CacheControl==0.14.3
 certifi==2025.4.26
 cffi==1.17.1
+channels==4.2.2
 charset-normalizer==3.4.2
 cleo==2.1.0
 crashtest==0.4.1
