--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.9.0
 asgiref==3.8.1
+billiard==4.2.1
 build==1.2.2.post1
 CacheControl==0.14.3
+celery==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
 channels==4.2.2
 charset-normalizer==3.4.2
 cleo==2.1.0
+click==8.2.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 crashtest==0.4.1
 cryptography==45.0.2
 diff-match-patch==20241021
@@ -41,6 +48,7 @@ jaraco.functools==4.1.0
 jeepney==0.9.0
 jiter==0.10.0
 keyring==25.6.0
+kombu==5.5.3
 more-itertools==10.7.0
 msgpack==1.1.0
 openai==1.79.0
@@ -51,10 +59,12 @@ pkginfo==1.12.1.2
 platformdirs==4.3.8
 poetry==2.1.3
 poetry-core==2.1.3
+prompt_toolkit==3.0.51
 pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
 pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
 qrcode==8.2
 RapidFuzz==3.13.0
 rcssmin==1.1.2
@@ -63,6 +73,7 @@ requests-toolbelt==1.0.0
 rjsmin==1.2.2
 SecretStorage==3.3.3
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
 tablib==3.8.0
@@ -71,7 +82,10 @@ tqdm==4.67.1
 trove-classifiers==2025.5.9.12
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
 urllib3==2.4.0
+vine==5.1.0
 virtualenv==20.31.2
+wcwidth==0.2.13
 whitenoise==6.9.0
 zstandard==0.23.0
