--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 installer==0.7.0
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
@@ -57,6 +58,7 @@ pbs-installer==2025.4.9
 pillow==11.2.1
 pkginfo==1.12.1.2
 platformdirs==4.3.8
+pluggy==1.6.0
 poetry==2.1.3
 poetry-core==2.1.3
 prompt_toolkit==3.0.51
@@ -64,6 +66,8 @@ pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
 pyproject_hooks==1.2.0
+pytest==8.3.5
+pytest-django==4.11.1
 python-dateutil==2.9.0.post0
 qrcode==8.2
 RapidFuzz==3.13.0
