--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ cryptography==45.0.2
 diff-match-patch==20241021
 distlib==0.3.9
 distro==1.9.0
+dj-database-url==2.3.0
 dj-rest-auth==7.0.1
 Django==5.2.1
 django-admin-honeypot==1.1.0
@@ -28,6 +29,7 @@ django-appconf==1.1.0
 django-axes==8.0.0
 django-compressor==4.5.1
 django-cors-headers==4.7.0
+django-heroku==0.3.1
 django-import-export==4.3.7
 django-jazzmin==3.0.1
 django-ninja==1.4.1
@@ -62,6 +64,7 @@ pluggy==1.6.0
 poetry==2.1.3
 poetry-core==2.1.3
 prompt_toolkit==3.0.51
+psycopg2==2.9.10
 pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
