--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ django-appconf==1.1.0
 django-axes==8.0.0
 django-compressor==4.5.1
 django-cors-headers==4.7.0
+django-extensions==4.1
 django-heroku==0.3.1
 django-import-export==4.3.7
 django-jazzmin==3.0.1
