--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ django-heroku==0.3.1
 django-import-export==4.3.7
 django-jazzmin==3.0.1
 django-ninja==1.4.1
+django-taggit==6.1.0
 djangorestframework==3.16.0
 dulwich==0.22.8
 fastjsonschema==2.21.1
